ressources fixed [build]